--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,5 +1,5 @@
 * {
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   /*background-color: gray;*/
   font-family: sans-serif, Helvetica;
 }
@@ -7,6 +7,7 @@
 body {
   display: flex;
   flex-direction: column;
+  background-image:url(https://c2.staticflickr.com/6/5187/5584890365_f2a1eb90f5_b.jpg);
 }
 
 /*Header*/
@@ -43,7 +44,7 @@ header .empty {
 nav {
   display: flex;
   justify-content: space-around;
-  background-color: black;
+  background-color: #0d2636;
   text-transform: uppercase;
   position: -webkit-sticky;
   position: sticky;
@@ -58,7 +59,8 @@ nav div {
 }
 
 nav div:hover {
-  background-color: #0068b1;
+  background-color: rgb(0,104,177);
+  background-color: rgba(0,104,177,0.6);
 }
 
 /*a:hover {
@@ -73,22 +75,50 @@ nav a {
 
 /*About Me Section*/
 
+#Welcome {
+  background-color: rgb(0,104,177);
+  background-color: rgba(0,104,177,0.6);
+  margin: 20px;
+  border-radius: 20px 50px;
+}
+
+.blocktext {
+  width: 60%;
+  margin: auto;
+  padding: 20px;
+}
+
 /*Work Section*/
 #Work {
   display: flex;
   justify-content: space-around;
+  padding: 30px;
 }
 
 #Work div {
-  flex: 20%;
+  flex-basis: 30%;
   text-align: justify;
 }
 
+.worklogo {
+  max-height: 75px;
+  display: block;
+  margin: auto;
+}
+
 /*Showcase*/
+#showcase {
+  background-color: rgb(0,104,177);
+  background-color: rgba(0,104,177,0.6);
+  border-radius: 20px 50px;
+}
+
 #Showcase, #Showcase2 {
   display: flex;
   align-items: center;
-
+  justify-content: space-around;
+  margin: 15px;
+  padding: 15px;
 }
 
 .Project {
@@ -117,8 +147,8 @@ img {
 }
 
 h2 {
-  background-color: black;
+  background-color: #0d2636;
   color: white;
   text-align: center;
-  margin: 30px 70px 30px 70px;
+  margin: 30px 80px 30px 80px;
 }
