--- a/CSS/main.css
+++ b/CSS/main.css
@@ -10,6 +10,40 @@ body {
   background-image:url(https://c2.staticflickr.com/6/5187/5584890365_f2a1eb90f5_b.jpg);
 }
 
+@media screen and (max-width: 500px) {
+  header {
+    display: flex;
+    flex-direction: column;
+  }
+
+  nav {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  nav div {
+    padding: 10px;
+  }
+
+  nav a {
+    color: white;
+    font-size: .5em;
+    margin: auto;
+  }
+
+#Work {
+  display: flex;
+  flex-direction: column;
+}
+
+#Showcase {
+  flex-direction: column;
+}
+#Showcase2 {
+  flex-direction: column-reverse;
+}
+}
+
 /*Header*/
 header {
   display: flex;
